# sensory-wheel

./: .gitignore  CLAUDE.md  LICENSE  README.md  netlify.toml  pyproject.toml
data/source/: citations.json  compounds.json  ingredients.json  scents.json  taxonomy.json
docs/: BUSINESS_RULES.md  PRODUCT_REQUIREMENTS.md  SYSTEM_ARCHITECTURE.md  WORKFLOWS.md
docs/superpowers/plans/: 2026-05-10-sensory-wheel-docs-suite.md  2026-05-10-sensory-wheel-scaffolding.md
docs/superpowers/specs/: 2026-05-10-sensory-wheel-docs-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  main.js  styles.css
frontend/src/components/: SidePanel.svelte  Sidebar.svelte  Wheel.svelte
frontend/src/lib/: data.js  store.js  wheel.js
scripts/: build_bundle.py
sensory_wheel/: bundle.py  load.py  schemas.py
tests/: test_bundle.py  test_load.py  test_schemas.py
