[project]
name = "sensory-wheel"
version = "0.1.0"
description = "Build-time data pipeline and Svelte 5 frontend for plant-based-meat flavor formulation."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
